try to get background image

--- a/MyDal.html
+++ b/MyDal.html
@@ -62,7 +62,7 @@ function fnMiniSearch(frThis) {
 
 <script src="https://my.dal.ca/custom/dal2/js/jquery-current.js" type="text/javascript"></script><script src="https://my.dal.ca/custom/dal2/js/jquery-ui.js" type="text/javascript"></script><style type="text/css">#dalalert_box { background-color: #eff1e3; padding: 10px; display: none; } #dalalert_wrapper { -moz-border-radius: 5px; -webkit-border-radius: 5px; border: 1px solid #bb7900; background-color: #fafafa; padding: 10px; } #dalalert_left { width: 150px; float: left; font-size: 11px; padding-right: 20px; text-align: left; } #dalalert_left h1 { color: #aa0000; margin: 0px; font-size: 22px; font-weight: bold; } #dalalert_right { border-left: 1px solid #cccccc; width: 60%; float: left; padding-left: 20px; text-align: left; } #dalalert_dismiss { background: url(https://dalalert.dal.ca/templates/dal/media/alert_close.gif); width: 20px; height: 20px; float: right; text-align: right; } #dalalert_headline { font-size: 20px; font-weight: bold; margin: 0px; } #dalalert_timestamp { font-size: 11px; } #dalalert_desc { font-size: 14px; } #dalalert_info { font-size: 12px; } #dalalert_desc a { color: #aa0000; font-weight: bold; text-decoration: underline; } #dalalert_debug { font-size: 0.8em; }</style><script src="https://dalalert.dal.ca/feed.php"></script></head>
 </head>
-<body class="main" background-image=./images/background.jpg>
+<body class="main" background="http://git.amoriarty.com/images/background.jpg">
 <table width="100%" cellspacing="0" cellpadding="0" border="0">
 <tbody> 
 <tr>
