--- a/blankpage.html
+++ b/blankpage.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+
+    <meta name="author" content="Alex Moriarty">
+    <meta name="description" content="PAGE CONTENT">
+
+    <title>PAGE TITLE</title>
+
 	<link rel="stylesheet" type="text/css" href="./css/style.css" media="screen"/>
 </head>
 <body>
@@ -12,16 +19,16 @@
 			a. moriarty
 		</div><!--End Name-->
 		<div id="topnav">
-			about | experience | portfolio | research | hobies
+			about | experience | portfolio | research | hobbies
 		</div><!--End TopNav-->
 	</header>
 	<div id="container">
-		<div id="container-wrapper">
+		<div id="container-wrapper" class="persist-area">
 		<div id="pagehead">
 			<div id="breadcrumbs">
 				somepage > somepage
 			</div><!--End BreadCrumbs-->
-			<div id="pagetitle">
+			<div id="pagetitle" class="persist-header">
 				THIS IS A TEST PAGE
 			</div>
 			<div id="subnav">
@@ -38,18 +45,30 @@
 				<div>google+</div>
 				<div>twitter</div>
 			</div><!--End SocialBar-->
+			<div id="lowerfoot">
 			<div id="contact">
-				contact
+				<address>
+					Alexander Moriarty<br>
+					Dalhousie University<br>
+					Halifax, NS, Canada<br>
+					moriarty[at]cs.dal.ca
+				</address>
 			</div><!--End Contact-->
 			<div id="footlogo">
-				A M
+				am
 			</div><!--End FootLogo-->
 			<div id="footnav">
 				foot nav
 			</div><!--End FootNav-->
+		</div><!--End LowerFoot-->
 		</footer>
 	</div><!--End Container-wrapper-->
 	</div><!--End Container-->
 	</div><!--End Wrap-->
+	<!--Javascript goes here-->
+	<script type="text/javascript" src="js/jquery-1.8.2.min.js"></script> 
+	<script type="text/javascript" src="js/jquery.cookie.js"></script>
+	<script type="text/javascript" src="js/final.js"></script>
+	<!---->
 </body>
 </html>
