more work on final project

--- a/blankpage.html
+++ b/blankpage.html
@@ -19,11 +19,17 @@
 			a. moriarty
 		</div><!--End Name-->
 		<div id="topnav">
-			about | experience | portfolio | research | hobbies
+			<ul id="topnavlist">
+				<li><a href="">about</a></li>
+				<li><a href="">experience</a></li>
+				<li><a href="">portfolio</a></li>
+				<li><a href="">research</a></li>
+				<li><a href="">hobbies</a></li>
+			</ul>
 		</div><!--End TopNav-->
 	</header>
 	<div id="container">
-		<div id="container-wrapper" class="persist-area">
+		<div id="container-wrapper" class="persist-area shadow-right">
 		<div id="pagehead">
 			<div id="breadcrumbs">
 				somepage > somepage
@@ -39,19 +45,19 @@
 		</div><!--End Content-->
 		<footer>
 			<div id="socialbar">
-				<div>github</div>
-				<div>linkedin</div>
-				<div>facebook</div>
-				<div>google+</div>
-				<div>twitter</div>
+				<div class="socialbar-box">github</div>
+				<div class="socialbar-box">linkedin</div>
+				<div class="socialbar-box">facebook</div>
+				<div class="socialbar-box">google+</div>
+				<div class="socialbar-box">twitter</div>
 			</div><!--End SocialBar-->
 			<div id="lowerfoot">
 			<div id="contact">
 				<address>
-					Alexander Moriarty<br>
+					<b>Alexander Moriarty</b><br>
 					Dalhousie University<br>
 					Halifax, NS, Canada<br>
-					moriarty[at]cs.dal.ca
+					moriarty"at"cs.dal.ca
 				</address>
 			</div><!--End Contact-->
 			<div id="footlogo">
@@ -68,6 +74,7 @@
 	<!--Javascript goes here-->
 	<script type="text/javascript" src="js/jquery-1.8.2.min.js"></script> 
 	<script type="text/javascript" src="js/jquery.cookie.js"></script>
+	<script type="text/javascript" src="js/tinynav.js"></script>
 	<script type="text/javascript" src="js/final.js"></script>
 	<!---->
 </body>
