more work on final project

--- a/blankpage.html
+++ b/blankpage.html
@@ -35,10 +35,10 @@
 		<div id="container-wrapper" class="persist-area shadow-right">
 		<div id="pagehead">
 			<div id="breadcrumbs">
-				somepage > somepage
+				<a href="./home.html">home</a> > <a href="#">blankpage</a>
 			</div><!--End BreadCrumbs-->
 			<div id="pagetitle" class="persist-header">
-				THIS IS A TEST PAGE
+				THIS IS BLANKPAGE
 			</div>
 			<div id="subnav">
 			</div><!--End SubNav-->
@@ -48,11 +48,11 @@
 		</div><!--End Content-->
 		<footer>
 			<div id="socialbar">
-				<div class="socialbar-box">github</div>
-				<div class="socialbar-box">linkedin</div>
-				<div class="socialbar-box">facebook</div>
-				<div class="socialbar-box">google+</div>
-				<div class="socialbar-box">twitter</div>
+				<div class="socialbar-box"><a href="http://github.com/moriarty">github</a></div>
+				<div class="socialbar-box"><a href="http://linkedin.com/forgetmyusername">linkedin</a></div>
+				<div class="socialbar-box"><a href="http://fb.com/alexander.moriarty">facebook</a></div>
+				<div class="socialbar-box"><a href="http://plus.google.com/alexander.moriarty">google+</a></div>
+				<div class="socialbar-box"><a href="http://twitter.com/alex_moriarty">twitter</a></div>
 			</div><!--End SocialBar-->
 			<div id="lowerfoot">
 			<div id="contact">
@@ -70,9 +70,9 @@
 				<select>
 					<option value="" selected="selected">Navigation</option>
 				</select><br>
-				Documentation<br>
-				Updated<br>
-				Copyright
+				<a href="./documentation.html">Documentation</a><br>
+				Updated: Nov. 29 2012<br>
+				&copy; Alex Moriarty
 			</div><!--End FootNav-->
 		</div><!--End LowerFoot-->
 		</footer>
