--- a/home.html
+++ b/home.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 
     <meta name="author" content="Alex Moriarty">
-    <meta name="description" content="PAGE CONTENT">
-
-    <title>PAGE TITLE</title>
+    <meta name="description" content="Alex Moriarty, A soon to be graduate of Dalhousie University ready to continue research and studies in Robotics, and Autonomous Systems.">
+     <link rel="icon" type="image/png" href="./favicon.png"/>
+    <title>Alex Moriarty</title>
 
 	<link rel="stylesheet" type="text/css" href="./css/style.css" media="all"/>
 </head>
