minor play pause button added. will not be used.

--- a/blankpage.html
+++ b/blankpage.html
@@ -79,6 +79,7 @@
 	</div><!--End Container-wrapper-->
 	</div><!--End Container-->
 	</div><!--End Wrap-->
+	<div id="playpause"></div>
 	<!--Javascript goes here-->
 	<script type="text/javascript" src="js/jquery-1.8.2.min.js"></script> 
 	<script type="text/javascript" src="js/jquery.cookie.js"></script>
