Added youbot images and shadowbox

--- a/hobbies.html
+++ b/hobbies.html
@@ -8,7 +8,9 @@
 
     <title>hobbies amoriarty</title>
     <link rel="icon" type="image/png" href="./favicon.png"/>
+	<link rel="stylesheet" type="text/css" href="./js/shadowbox/shadowbox.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="./css/style.css" media="all"/>
+
 </head>
 <body id="body">
 	<div id="wrap">
@@ -46,7 +48,15 @@
 		<div id="content">
 			<h3>Photography</h3>
 			<p>All the background images on this site are my own work. I have taken over 20,000 photos in the past 5 years. Currently I have 6 Canon camera's and of course the an iPhone camera. My primary camera's are: Canon EOS-7D for digital, Canon EOS-3 for film and Canon Powershot D20 underwater camera for getting wet.</p>
-			<p>Putting together an album by "hand" and generating thumbnail images without the help of php is a pain. So for this final project I'm going to reuse my YouBot images. Most of these images were taken for at Automatica 2012 in Munich, Germany. The rights have since been given to <a href="http://www.youbot-store.com">The Youbot Store</a> and <a href="http://www.ni.com">National Intruments</a></p>
+			<p>Putting together an album by "hand" and generating thumbnail images without the help of php is a pain. So for this final project I'm going to reuse my YouBot images. These images were taken by me at Automatica 2012 in Munich, Germany. The rights have since been given to <a href="http://www.youbot-store.com">The Youbot Store</a> and <a href="http://www.ni.com">National Intruments</a></p>
+		<p>
+			<a href="media/youbot-infx-1.jpg" rel="shadowbox[Youbot]" title="youbot"><img src="./media/youbot-infx-thumb-1.jpg"></a>
+			<a href="media/youbot-infx-2.jpg" rel="shadowbox[Youbot]" title="youbot"><img src="./media/youbot-infx-thumb-2.jpg"></a>
+			<a href="media/youbot-infx-3.jpg" rel="shadowbox[Youbot]" title="youbot"><img src="./media/youbot-infx-thumb-3.jpg"></a>
+			<a href="media/youbot-infx-4.jpg" rel="shadowbox[Youbot]" title="youbot"><img src="./media/youbot-infx-thumb-4.jpg"></a>
+			<a href="media/youbot-infx-5.jpg" rel="shadowbox[Youbot]" title="youbot"><img src="./media/youbot-infx-thumb-5.jpg"></a>
+			<a href="media/youbot-infx-6.jpg" rel="shadowbox[Youbot]" title="youbot"><img src="./media/youbot-infx-thumb-6.jpg"></a>
+		</p>
 			<h3>Outdoor Activities</h3>
 			<p></p>
 			<p>I could keep some sort of blog here... As long as I could update it via twitter automatically.</p>
@@ -88,6 +98,7 @@
 	<script type="text/javascript" src="js/jquery-1.8.2.min.js"></script> 
 	<script type="text/javascript" src="js/jquery.cookie.js"></script>
 	<script type="text/javascript" src="js/tinynav.js"></script>
+	<script type="text/javascript" src="./js/shadowbox/shadowbox.js"></script> 
 	<script type="text/javascript" src="js/final.js"></script>
 	<!---->
 </body>
