--- a/blankpage.html
+++ b/blankpage.html
@@ -92,6 +92,7 @@ Etiam et rutrum mauris. Vivamus a arcu non lectus consectetur imperdiet. Fusce f
 	<script type="text/javascript" src="js/jquery-1.8.2.min.js"></script> 
 	<script type="text/javascript" src="js/jquery.cookie.js"></script>
 	<script type="text/javascript" src="js/tinynav.js"></script>
+	<script type="text/javascript" src="./js/shadowbox/shadowbox.js"></script> 
 	<script type="text/javascript" src="js/final.js"></script>
 	<!---->
 </body>
