--- a/experience.html
+++ b/experience.html
@@ -90,6 +90,7 @@
 	<script type="text/javascript" src="js/jquery-1.8.2.min.js"></script> 
 	<script type="text/javascript" src="js/jquery.cookie.js"></script>
 	<script type="text/javascript" src="js/tinynav.js"></script>
+	<script type="text/javascript" src="./js/shadowbox/shadowbox.js"></script> 
 	<script type="text/javascript" src="js/final.js"></script>
 	<!---->
 </body>
