--- a/hobbies.html
+++ b/hobbies.html
@@ -50,12 +50,12 @@
 			<p>All the background images on this site are my own work. I have taken over 20,000 photos in the past 5 years. Currently I have 6 Canon camera's and of course the an iPhone camera. My primary camera's are: Canon EOS-7D for digital, Canon EOS-3 for film and Canon Powershot D20 underwater camera for getting wet.</p>
 			<p>Putting together an album by "hand" and generating thumbnail images without the help of php is a pain. So for this final project I'm going to reuse my YouBot images. These images were taken by me at Automatica 2012 in Munich, Germany. The rights have since been given to <a href="http://www.youbot-store.com">The Youbot Store</a> and <a href="http://www.ni.com">National Intruments</a></p>
 		<p>
-			<a href="media/youbot-infx-1.jpg" rel="shadowbox[Youbot]" title="youbot"><img src="./media/youbot-infx-thumb-1.jpg"></a>
-			<a href="media/youbot-infx-2.jpg" rel="shadowbox[Youbot]" title="youbot"><img src="./media/youbot-infx-thumb-2.jpg"></a>
-			<a href="media/youbot-infx-3.jpg" rel="shadowbox[Youbot]" title="youbot"><img src="./media/youbot-infx-thumb-3.jpg"></a>
-			<a href="media/youbot-infx-4.jpg" rel="shadowbox[Youbot]" title="youbot"><img src="./media/youbot-infx-thumb-4.jpg"></a>
-			<a href="media/youbot-infx-5.jpg" rel="shadowbox[Youbot]" title="youbot"><img src="./media/youbot-infx-thumb-5.jpg"></a>
-			<a href="media/youbot-infx-6.jpg" rel="shadowbox[Youbot]" title="youbot"><img src="./media/youbot-infx-thumb-6.jpg"></a>
+			<a href="media/youbot-infx-1.jpg" rel="shadowbox[Youbot]" title="The Kuka Youbot: Automatica 2012"><img alt="youBot: Kuka's insustrial mobile manipulation research platform at Automatica 2012" src="./media/youbot-infx-thumb-1.jpg"></a>
+			<a href="media/youbot-infx-2.jpg" rel="shadowbox[Youbot]" title="The Kuka Youbot: Automatica 2012"><img alt="youBot: Kuka's insustrial mobile manipulation research platform at Automatica 2012" src="./media/youbot-infx-thumb-2.jpg"></a>
+			<a href="media/youbot-infx-3.jpg" rel="shadowbox[Youbot]" title="The Kuka Youbot: Automatica 2012"><img alt="youBot: Kuka's insustrial mobile manipulation research platform at Automatica 2012" src="./media/youbot-infx-thumb-3.jpg"></a>
+			<a href="media/youbot-infx-4.jpg" rel="shadowbox[Youbot]" title="The Kuka Youbot: Automatica 2012"><img alt="youBot: Kuka's insustrial mobile manipulation research platform at Automatica 2012" src="./media/youbot-infx-thumb-4.jpg"></a>
+			<a href="media/youbot-infx-5.jpg" rel="shadowbox[Youbot]" title="The Kuka Youbot: Automatica 2012"><img alt="youBot: Kuka's insustrial mobile manipulation research platform at Automatica 2012" src="./media/youbot-infx-thumb-5.jpg"></a>
+			<a href="media/youbot-infx-6.jpg" rel="shadowbox[Youbot]" title="The Kuka Youbot: Automatica 2012"><img alt="youBot: Kuka's insustrial mobile manipulation research platform at Automatica 2012" src="./media/youbot-infx-thumb-6.jpg"></a>
 		</p>
 			<h3>Outdoor Activities</h3>
 			<p></p>
