--- a/home.html
+++ b/home.html
@@ -32,6 +32,7 @@
 		</nav><!--End TopNav-->
 	</header>
 	</div><!--End Wrap-->
+	<div id="new-wrap">
 	<!--Javascript goes here-->
 	<script type="text/javascript" src="js/jquery-1.8.2.min.js"></script> 
 	<script type="text/javascript" src="js/jquery.cookie.js"></script>
@@ -39,5 +40,6 @@
 	<script type="text/javascript" src="./js/shadowbox/shadowbox.js"></script> 
 	<script type="text/javascript" src="js/final.js"></script>
 	<!---->
+</div>
 </body>
 </html>
