--- a/about.html
+++ b/about.html
@@ -51,13 +51,15 @@
 				<tr><th>age:</th><td id="age"></td></tr>
 				<tr><th>Location:</th><td>Halifax</td></tr>
 				<tr><th>Occupation:</th><td>Student</td></tr>
-				<tr><th>School:</th><td>Dalhousie University</td></tr>
+				<tr><th>Education:</th>
+					<td>B.CS, 2013, Dalhousie University</td>
+				</tr>
+				<tr><th>Current:</th>
+					<td>M.CS, Autonomous Systems, <a href="www.brsu.de">BRSU</a></td>
+				</tr>
 			</table>
-			<h3>The juicy details:</h3>
-			<p>My name is Alex Moriarty. I am a Computer Science student living in my hometown of Halifax Nova Scotia. I started studying Electrical Engineering and Computer Science in the fall of 2008, and will be graduating in the upcomming spring term with the Bachelor of Computer Science. I am still interested in Electrical and Computer Engineering but events unfolded which made continuing the concurrent degree program in a reasonable amount of time impossible.</p>
-			<p>I do spend most of my time on campus, but I have interests outside of the lab. I'm an avid traveller. I enjoy the outdoors and camping. I've volunteered abroad and taught English in Peru. I was once an extremely active curler and cyclist, but injury and education got in the way.</p>
+			<h3>The details:</h3>
 			<p>
-			Although I am accused of being an addict of a certain computer and electronics manufacturer, I deny all these allegations... I do however admit to being a Canon fanboy. I love photography, and remember making my first pin hole camera in elementary school. After spending a while in South East Asia, and coming back to learn my little point and shoot camera's sensor was rubish and nearly every image was too. I invested in my first proper Canon: injury had just taken away a lot of my usual physical activities, and I suddenly didn't want to save up for a motorcycle anymore. So to put a positive spin on a low point in my life, I came out with a great new hobbie. 
 			</p>
 		</div><!--End Content-->
 		<footer>
