--- a/blankpage.html
+++ b/blankpage.html
@@ -20,11 +20,11 @@
 		</div><!--End Name-->
 		<nav id="topnav">
 			<ul id="topnavlist">
-				<li class="active"><a href="./about.html">About</a></li>
-				<li><a href="./experience.html">Experience</a></li>
-				<li><a href="./portfolio.html">Portfolio</a></li>
-				<li><a href="./research.html">Research</a></li>
-				<li><a href="./hobbies.html">Hobbies</a></li>
+				<li><a href="./about.html">About</a></li>
+				<li><a href="./blankpage.html">Experience</a></li>
+				<li><a href="./blankpage.html">Portfolio</a></li>
+				<li><a href="./blankpage.html">Research</a></li>
+				<li><a href="./blankpage.html">Hobbies</a></li>
 			</ul>
 			<select>
 				<option value="" selected="selected">Navigation</option>
