--- a/about.html
+++ b/about.html
@@ -44,18 +44,18 @@
 			</div><!--End SubNav-->
 		</div><!--End PageHead-->
 		<div id="content">
-			<h3>The required Table:</h3>
 			<table>
 				<tr><th colspan="2">Quick Facts</th></tr>
 				<tr><th>Name:</th><td>Alex Moriarty</td></tr>
 				<tr><th>age:</th><td id="age"></td></tr>
-				<tr><th>Location:</th><td>Halifax</td></tr>
+				<tr><th>Hometown:</th><td>Halifax, Canada</td></tr>
+				<tr><th>Location:</th><td>Cologne, Germany</td></tr>
 				<tr><th>Occupation:</th><td>Student</td></tr>
 				<tr><th>Education:</th>
-					<td>B.CS, 2013, Dalhousie University</td>
+					<td>B.CS, 2013, <a href="http://www.dal.ca">Dalhousie University</a></td>
 				</tr>
 				<tr><th>Current:</th>
-					<td>M.CS, Autonomous Systems, <a href="www.brsu.de">BRSU</a></td>
+					<td>M.CS, Autonomous Systems, <a href="http://www.brsu.de">BRS-U</a></td>
 				</tr>
 			</table>
 			<h3>The details:</h3>
