--- a/blankpage.html
+++ b/blankpage.html
@@ -16,7 +16,7 @@
 		<div id="logo">
 		</div><!--End Logo-->
 		<div id="sitename">
-			<a href="./home.html">a. moriarty</a>
+			<a href="./index.html">a. moriarty</a>
 		</div><!--End Name-->
 		<nav id="topnav">
 			<ul id="topnavlist">
